# cygnet

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  ISSUES.md  LICENSE  README.md  REVIEW.md  THEORY.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bench/: _compare.py  _summary.py  conftest.py  profile_hotspots.py  test_e2e.py  test_hydration_micro.py  test_overhead.py  test_render.py
bench/comparison/: apps.py  models.py  test_comparison.py
cygnet/: __init__.py  annotations.py  arrays.py  asyncpg_db.py  builders.py  cte.py  executor.py  expression.py  fts.py  functions.py  jsonb.py  meta.py  predicate.py  proxy.py  psycopg_db.py  stubs.py
docs/reviews/: comment-run-20260522.md  review-20260429-175335.md  review-20260522-084756.md  review-20260621-064726.md
docs/superpowers/plans/: 2026-04-06-delete-create-truncate-lit.md  2026-04-07-builder-sql-method.md  2026-04-07-expression-protocol.md  2026-04-07-operators.md  2026-04-08-foreign-key-follow.md
docs/superpowers/specs/: 2026-04-06-delete-create-truncate-lit-design.md  2026-04-07-builder-sql-method-design.md  2026-04-07-expression-protocol-design.md  2026-04-07-operators-design.md  2026-04-08-foreign-key-follow-design.md
tests/: conftest.py  test_asyncpg_db.py  test_bench_compare.py  test_bench_summary.py  test_builders.py  test_bulk_insert_shape.py  test_cross_table_dml.py  test_cte.py  test_error_messages.py  test_expression.py  test_follow_many.py  test_functions.py  test_hydration.py  test_lateral.py  test_locking.py  test_mapping.py  test_meta.py  test_meta_field_filtering.py  test_on_conflict.py  test_pg_helpers.py  test_predicate.py  test_set_ops.py  test_streaming.py  test_stubs.py  test_subquery.py  test_transaction.py  test_windows.py
tests/integration/: __init__.py  conftest.py  test_advanced_queries.py  test_asyncpg_adapter.py  test_column_defaults.py  test_pg_helpers.py  test_pg_types.py  test_roundtrip.py
