[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cygnet-orm"
version = "0.1.0"
description = "The littlest ORM — bring your own objects, write real SQL"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["postgresql", "orm", "database", "asyncio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Framework :: AsyncIO",
]
# Cygnet itself is driver-agnostic: the `db` object is duck-typed (see
# the protocol in README.md / cygnet/psycopg_db.py).  psycopg is only
# needed if you use the bundled reference adapter — install with the
# [psycopg] extra below.  Bring-your-own-adapter installs stay
# psycopg-free.
dependencies = []

[project.optional-dependencies]
# Reference adapter dependency.  `pip install cygnet-orm[psycopg]` for
# users who want PsycopgDB out of the box; bare `pip install cygnet-orm`
# omits it for projects shipping a custom adapter (asyncpg, a wrapper
# around an HTTP DB gateway, etc.).
psycopg = [
    "psycopg[binary]>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    # Reference adapter is needed for integration tests + the FakeDB
    # protocol parity check.  Pinned to the same floor as the [psycopg]
    # extra; keep these in sync.
    "psycopg[binary]>=3.1",
]
# Optional: micro/macro benchmarks + cross-ORM comparison.  Heavy
# dependencies (Django, SQLAlchemy) live here so regular `dev` installs
# stay light.  Install with `pip install -e ".[bench]"` or the
# `just bootstrap-bench` target.
bench = [
    "pytest-benchmark>=4",
    "django>=5",
    # `[asyncio]` pulls in greenlet, which SQLAlchemy's async session
    # needs even though our async path goes through psycopg3 directly.
    "sqlalchemy[asyncio]>=2.0",
    # bench/test_e2e.py wraps a real PG connection with PsycopgDB.
    "psycopg[binary]>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["cygnet"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Default collection scope.  bench/ is intentionally excluded so a bare
# `pytest` invocation doesn't trigger the benchmark suite — invoke with
# `pytest bench/` or `just bench` explicitly.
testpaths = ["tests"]
markers = [
    "integration: requires a live PostgreSQL instance (set CYGNET_TEST_DSN)",
    "bench: micro/macro benchmark; collected only with --benchmark-only",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
